fix(motor): repair the F8 virtual-work axis + the S2→lever moment transfer, and diagnose the site-normal mismatch
TWO PRODUCTION MECHANICS REPAIRS (default-on), then the diagnostics that
followed from them. No parameter was tuned to make any number agree.

REPAIR 1 — F8 generalized-force axis: eup → econv.
The explicit-S2 solvers projected the (purely translational) F8 spring onto the
converter coordinates about eup, but the geometry rotates about econv. With the
converter geometry planar the two are ORTHOGONAL, so an in-plane bond force fed
exactly ZERO generalized load into phi and psi — and the only load the legacy
axis felt (out-of-plane) is the one the true geometry ignores. Present since
1b227c0 (2026-07-15). Corrected on all eight assemblies (matS2SolveStep,
matS2SolveStepTilt, beamRelaxAnalytic, s2SolveM, s2Solve, ExplicitBeamSolver,
TwoBodyGpuKernels.explicitBeamStep, and the ExplicitBeamGpuHarness mirror),
carried by one switch (matc[4] / F8_AXIS_LEGACY). F8 stiffness and rest length
are untouched; only the chain rule changed.
  Gates: FD-vs-column 4e-08; virtual-work closure 3.5e-07; in-plane load matches
  the FD ground truth to ~1e-07 where legacy gave exactly 0; fixed-site
  relaxation now STATIONARY under the true gradient (1.0e-08 vs legacy 1.9e-01).

REPAIR 2 — the S2 ended at the lever as an exact ZERO-MOMENT PIN.
Nothing constrained the lever angle phi once the head's rest pose became
neck-relative. Archaeology found no historical joint to restore: the direct
counterpart, the sphere-head J2 rod-lever joint, is myoJ2FracMoveTorq = 0.00 in
the frozen v1 oracle — itself a free hinge. Option A taken: the lever is the
terminal orientation of the S2 chain, held by the beam's OWN kbend (EI/l0, AMK
2008) against a rest angle read off the as-built geometry. NO new parameter.
  Gates: the zero-energy (phi+d, psi+d) mode is gone; rigid covariance 4e-14;
  bending the distal S2 shifts the lever's rest angle 1:1; joint stays compliant
  (13.7 deg thermal play,